# joshua

./: .3610564.test.1  .classpath  .gitignore  .gitmodules  .project  CHANGELOG  Dockerfile  INSTALL.txt  LICENSE  LICENSE.txt  Makefile  Makefile.lexprobs  README  README.md  README.txt  build.xml  decoder  eclipse-codeformat.xml  extract-1best  hello_world_file  ivy.xml  ivysettings.xml  joshua-decoder  joshua-decoder-server.py  joshua-server  joshua-server-debug  logging.properties  logging.tests.properties  pom.xml  sp_to_en_readme  testng.xml  tree-visualizer
HMERT_dev/: Align.config.25sen.txt  Align.config.rand10sen.txt  Align.config.txt  GQ.config.rest.25sen.txt  GQ.config.rest.rand10sen.txt  GQ.config.unrest.25sen.txt  GQ.config.unrest.rand10sen.txt  README.txt  de-en.newstest2008.10sen.reference.tok.alignments  de-en.newstest2008.reference.tok.alignments  de_en_europarl_alignments.5ksen.txt  mturk.rest.25sen.input.csv  mturk.rest.25sen.input.lng.csv  mturk.rest.25sen.input.shr.csv  mturk.rest.25sen.results.lng.csv  nbest.out.ZMERT.it6.25sen.trees  nbest.out.ZMERT.it6.rand10sen.trees  nbest.out.sm  nbest.out.sm.trees  newQueries.rest.25sen.txt  newstest2008.10sen.de.tok.lc  newstest2008.10sen.de.tok.parsed  newstest2008.10sen.en.tok.lc  newstest2008.de.tok.lc  newstest2008.de.tok.parsed  newstest2008.en.tok.lc  newstest2008.rand10sen.de.tok.lc  newstest2008.rand10sen.de.tok.parsed  newstest2008.rand10sen.en.tok.lc  out_SrcCand.align.25sen  out_SrcCand.align.rand10sen  rand10sen.info  template_hmert.htm  template_hmert_few.htm  template_hmert_refhighlighted.htm
MERT_example/: MERT.out.verbosity1  MERT.out.verbosity2  MERT_config_ex1.txt  MERT_config_ex2.txt  README.txt  README_MERT.txt  config.txt  config_ex1.txt  config_ex2.txt  decoder_command.txt  decoder_command_ex1.txt  decoder_command_ex2.txt  initial_lambdas.txt  param_names.txt  params.txt  ref.1.txt  ref.txt  ref_small.0  ref_small.2.txt  ref_small.3.txt
ZMERT_example/: README_ZMERT.txt  ZMERT.out.verbosity1  ZMERT.out.verbosity2  ZMERT_config_ex2.txt  config_ex2.txt  decoder_command_ex2  params.txt
aexperiment/: example.config.HG.javalm  micro.rule.feat  micro.rule.feat.Xonly  wordMap
aexperiment/iwslt/: devset1_2.lc.en0  devset1_2.lc.en0.b  devset1_2.lc.en0.b.nbest  devset1_2.lc.en1  devset1_2.lc.en10  devset1_2.lc.en11  devset1_2.lc.en12  devset1_2.lc.en13  devset1_2.lc.en14  devset1_2.lc.en15  devset1_2.lc.en2  devset1_2.lc.en3  devset1_2.lc.en4  devset1_2.lc.en5  devset1_2.lc.en6  devset1_2.lc.en7  devset1_2.lc.en8  devset1_2.lc.en9  devset1_2.zh  devset1_2.zh.b  devset1_2_3.zh  devset3.lc.en0  devset3.lc.en1  devset3.lc.en10  devset3.lc.en11  devset3.lc.en12  devset3.lc.en13  (+11 more)
data/: es_en_europarl_alignments.txt.small.1  es_en_europarl_alignments.txt.small.100  europarl.en.small.1  europarl.en.small.100  europarl.es-en.small.1.hiero.grammar  europarl.es.small.1  europarl.es.small.100  glue-grammar  grammar.itg  tiny.en  tiny.fr  tiny.fr-en.alignment
doc/: Doxyfile  Eclipse.howto  about.dox  about.markdown  bibliography.bib  develop.markdown  develop.md  documentation.markdown  documentation.md  ff.md  mainpage.dox  mainpage.markdown  mainpage.md  new-pipeline.md  release.md  run.markdown  sparse_features.md  support.markdown  troubleshooting.md  tutorial.markdown
doxygen/: Doxyfile
example/: decode_example_javalm.sh  decode_example_srilm.sh  example.config.bloomfilterlm  example.config.javalm  example.config.srilm  example.test.in  example.test.in.with.manual.constraints
example-lattice/: README  decode.sh  grammar.test
example2/: bleu-1.04.pl  decode_example2.sh  example2.config.javalm  example2.config.srilm  get_1best_from_Nbest.pl
examples/: README  README.md  README.sp_to_en  download.sh
ext/kenlm/: CMakeLists.txt
ext/kenlm/cmake/: KenLMFunctions.cmake
grammars/: .history  hiero.glue  hiero.itg
jni/: build_kenlm.sh  kenlm_wrap.cc
lib/: .gitignore  README  ivy.xml  ivysettings.xml
pmd/: default-ruleset.xml
resources/: wa_grammar
scripts/: copy-config.pl  filter_grammar_to_sentences.sh  label_grammar.py
src/: overview.html
test/: prune-equivalent-translations.py  run-all-tests.sh  test-all.sh  testng.xml
thrax/: .gitignore  LICENSE.txt  README  build.xml  testng.xml
tree_visualizer/: README  tree.en  tree.fr  tree_visualizer.sh
(+2312 files in other folders)
